--- a/mahya.html
+++ b/mahya.html
@@ -6,7 +6,7 @@ body{
  direction:rtl;
 }
 </style>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style2.css">
 	<title>تشخیص اعداد اول و مرکب</title>
 	<script>
 		// تابع بررسی اینکه آیا یک عدد اول است یا نه
