--- a/maryam.html
+++ b/maryam.html
@@ -6,7 +6,7 @@ body{
  direction:rtl;
 }
 </style>
-	<link rel="stylesheet" href="style2.css">
+	<link rel="stylesheet" href="style.css">
 	<title>تشخیص اعداد اول و مرکب</title>
 	<script>
 		// تابع بررسی اینکه آیا یک عدد اول است یا نه
@@ -48,7 +48,7 @@ body{
 </head>
 <body>
 	<h1>تشخیص اعداد اول و مرکب</h1>
-	<h2>تهیه کننده: مریم امانی | مدرسه عصمت رشتخوار</h2>
+	<h2>تهیه کننده: مریم امانی ، فاطمه نورمحمدی تقی | مدرسه عصمت رشتخوار</h2>
 	<form onsubmit="handleSubmit(event)">
 		<label  for="number">عدد مورد نظر:</label>
 		<input  type="number" id="number" name="number" required>
