--- a/index.html
+++ b/index.html
@@ -11,27 +11,11 @@
  <div class="overlay"></div>
  <div class="wrapper">
    <div class="">
-     <h1 class="title"><span>Start</span>Vinewood Role Play</h1>
-     <div class="countdown-container">
-       <div>
-         <p id="days" class="big-text">0</p>
-         <span>Days</span>
-       </div>
-       <div>
-        <p id="hours" class="big-text">0</p>
-        <span>Hours</span>
-      </div>
-      <div>
-        <p id="min" class="big-text">0</p>
-        <span>Min</span>
-      </div>
-      <div>
-        <p id="sec" class="big-text">0</p>
-        <span>Sec</span>
-      </div>
-     </div>
+     <h1 class="title"><span>End</span>Vinewood Role Play</h1>
+     
    </div>
  </div>
+	</div>
 <script src="main.js"></script>
 </body>
 </html>
