--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <div class="overlay"></div>
  <div class="wrapper">
    <div class="">
-     <h1 class="title"><span>Soon</span>Vinewood Role Play</h1>
+     <h1 class="title"><span>SOON</span>Vinewood Role Play</h1>
      
    </div>
  </div>
