--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link rel="shortcut icon" href="img/1.png" />
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/all.css">
+<link rel="shortcut icon" href="1.png" />
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="all.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="script.js"></script>
 <script src="https://kit.fontawesome.com/0dfdec2c7e.js"></script>
 <title>Vinewood Role Play</title>
 <div class="logo">Vinewood RP</div>
-<img class="backguy" src="img/pic1.png">
+<img class="backguy" src="pic1.png">
 
 
 <ul class="menu">
