--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="sectitle">MTA</div>
         <div class="secsubtitle">Vinewood</div>
         <div class="secslots">30/50</div>
-        <div class="secip" id="first" onclick="openLink('first')">vwrp.ir</div><i onclick="copyText('first')" class="grey1 far fa-copy"></i>
+        <div class="secip" id="first" onclick="openLink('first')">sv.vwrp.ir</div><i onclick="copyText('first')" class="grey1 far fa-copy"></i>
         <div class="secbarfull">
             <div class="secinbar"></div>
         </div>
@@ -48,7 +48,7 @@
         <div class="sectitle">Discord</div>
         <div class="secsubtitle blue">Vinewood</div>
         <div class="secslots">240/∞</div>
-        <div class="secip blue" id="second" onclick="openLink('second')">tqnpyQbTyH</div><i onclick="copyText('second')" class="grey2 far fa-copy"></i>
+        <div class="secip blue" id="second" onclick="openLink('second')">NjwFqRCbzJ</div><i onclick="copyText('second')" class="grey2 far fa-copy"></i>
         <div class="secbarfull">
             <div class="secinbar bluebg"></div>
         </div>
@@ -60,7 +60,7 @@
         <div class="sectitle">TeamSpeak</div>
         <div class="secsubtitle pink">Vinewood</div>
         <div class="secslots">20/32</div>
-        <div class="secip pink" id="third" onclick="openLink('third')">vwrp.ir	</div><i onclick="copyText('third')" class="grey3 far fa-copy"></i>
+        <div class="secip pink" id="third" onclick="openLink('third')">ts.vwrp.ir:1153	</div><i onclick="copyText('third')" class="grey3 far fa-copy"></i>
         <div class="secbarfull">
             <div class="secinbar pinkbg"></div>
         </div>
