--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <div class="description">عدالت و برابری اولین اصل برای تضمین احترام ما به شماست. شما با فعالیت در شهر و پرداختن به کار و هدف خود به راحتی می توانید به اهداف و آرزو های خود برسید.اینجا زندگی دوم شماست !</div>
     <div  class="button1" onclick="openLink('first')">اتصال به سرور</div>
+    <div  class="button2" onclick="openLink('download')">دانلود بازی</div>
 </div>
 
 <div class="bar">
