--- a/grade8.html
+++ b/grade8.html
@@ -182,7 +182,7 @@
         </div>
     </div>
     <div class="creator">
-         طراحی و توسعه: مائده امانی زهرا امان
+         طراحی و توسعه: مائده امانی و زهرا امان
     </div>
     <script>
         function calculateHypotenuse() {
